# projectiam

./: .gitignore  AnaliseArtefatosFlowPlot.html  README.md  pyproject.toml  relatorio_tecnico.md  report.md  resumo_resultados.txt
src/projectiam/: crew_analise2.py  crew_inicial.py  loaders.py  main.py  streamlit_callbacks.py  teste.py
src/projectiam/config/: agents.yaml  tasks.yaml
src/projectiam/config/artefatos_crew/: agents.yaml  crew_inicial.py  tasks.yaml
