[project]
name = "projectiam"
version = "0.1.0"
description = "projectIAM using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
projectiam = "projectiam.main:run"
run_crew = "projectiam.main:run"
train = "projectiam.main:train"
replay = "projectiam.main:replay"
test = "projectiam.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
